--- a/web/contato.html
+++ b/web/contato.html
@@ -35,9 +35,8 @@
     </section>
     <!-- Fecha Introdução -->
 
-    <section class="orcamento container">
-        <h2 class="subtitulo">Orçamento</h2>
-        <form id="form_orcamento" class="form grid-8">
+    <section class="contato container">
+        <form id="form_orcamento" class="contato_form grid-8">
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
             <label for="email">E-mail</label>
@@ -46,22 +45,25 @@
             <input type="text" name="telefone" id="telefone">
             <label for="espec">Especificações</label>
             <textarea name="espec" id="espec"></textarea>
-            <button type="submit" class="btn">Enviar</button>
+            <button type="submit" class="btn btn-preto">Enviar</button>
         </form>
-        <div class="orcamento_dados grid-8">
+        <div class="contato_dados grid-8">
             <h3>Dados</h3>
             <span>+55 21 93223 3232</span>
-            <span class="dados_email">orcamento@bikcraft.com</span>
-            <h3>Monte a sua Bikcraft</h3>
-            <p>Escolha as especificações:</p>
+            <span>orcamento@bikcraft.com</span>
+            <span>Rua Ali Perto - Botafogo</span>
+            <span>Rio de Janeiro - RJ - Brasil</span>
+            <h3>Redes Sociais</h3>
             <ul>
-                <li>- Cores</li>
-                <li>- Estilo</li>
-                <li>- Medidas</li>
-                <li>- Acessórios</li>
-                <li>- E Outros</li>
+                <li><a href="https://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="Icone Facebook"></a></li>
+                <li><a href="https://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="Icone Instagram"></a></li>
+                <li><a href="https://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="Icone Twitter"></a></li>
             </ul>
         </div>
+    </section>
+
+    <section class="container contato_mapa">
+        <a class="grid-16" href="https://github.com/henrique-roldao" target="_blank"><img src="img/endereco-bikcraft.jpg" alt="Endereço Bikcraft"></a>
     </section>
 
     <section class="quebra">
