--- a/web/produtos.html
+++ b/web/produtos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/produtos.css">
     <link rel="stylesheet" href="css/responsivo.css">
+    <script>document.documentElement.classList.add("js");</script>
 </head>
 <body>
     <header class="header">
@@ -30,13 +31,13 @@
 
     <section class="introducao-interna interna_produtos">
         <div class="container">
-            <h1>Produtos</h1>
-            <p>conheça mais nosso produtos</p>
+            <h1 data-anime="400" class="fadeInDown">Produtos</h1>
+            <p data-anime="800" class="fadeInDown">conheça mais nosso produtos</p>
         </div>
     </section>
     <!-- Fecha Introdução -->
 
-    <section class="container produto_item">
+    <section data-anime="1200" class="fadeInDown container produto_item">
         <div class="grid-11">
             <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio">
             <h2>Passeio</h2>
@@ -190,6 +191,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
