--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsivo.css">
-
+    <script>document.documentElement.classList.add("js");</script>
 </head>
 <body>
+
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
@@ -30,18 +31,18 @@
 
     <section class="introducao">
         <div class="container">
-            <h1>Bicicletas Feitas a Mão</h1>
-            <blockquote class="quote-externo">
+            <h1 data-anime="400" class="fadeInDown">Bicicletas Feitas a Mão</h1>
+            <blockquote data-anime="800" class="fadeInDown quote-externo">
                 <p>"não tenha nada em sua casa que você não considere útil ou
                     acredita ser bonito"</p>
                 <cite>WILLIAM MORRIS</cite>
             </blockquote>
-            <a href="produtos.html" class="btn">Orçamento</a>
+            <a data-anime="1200" href="produtos.html" class="btn">Orçamento</a>
         </div>
     </section>
     <!-- Fecha Introdução -->
 
-    <section class="produtos container">
+    <section class="produtos container fadeInDown" data-anime="1600">
         <h2 class="subtitulo">Produtos</h2>
         <ul class="produtos_lista">
 
@@ -167,6 +168,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
