--- a/web/sobre.html
+++ b/web/sobre.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/responsivo.css">
+    <script>document.documentElement.classList.add("js");</script>
 </head>
 <body>
     <header class="header">
@@ -30,13 +31,13 @@
 
     <section class="introducao-interna interna_sobre">
         <div class="container">
-            <h1>Sobre</h1>
-            <p>conheça mais sobre a bikcraft</p>
+            <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+            <p data-anime="800" class="fadeInDown">conheça mais sobre a bikcraft</p>
         </div>
     </section>
     <!-- Fecha Introdução -->
 
-    <section class="missao_sobre container">
+    <section data-anime="1200" class="missao_sobre container fadeInDown">
         <div class="grid-10">
             <h2 class="subtitulo-interno">História, Missão e Visão</h2>
             <p>No mundo atual, a contínua expansão da nossa atividade cumpre um papel
@@ -129,6 +130,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
