:zap: Otimização do site

--- a/web/contato.html
+++ b/web/contato.html
@@ -16,12 +16,8 @@
 
     <link rel="shortcut icon" href="favicon.ico">   
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+
     <script>document.documentElement.classList.add("js");</script>
 </head>
 <body>
@@ -86,13 +82,13 @@
         <a class="grid-16" href="https://github.com/henrique-roldao" target="_blank"><img src="img/endereco-bikcraft.jpg" alt="Endereço Bikcraft"></a>
     </section>
 
-    <section class="quebra">
+    <div class="quebra">
         <blockquote class="quote-externo container">
             <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse
                 por todos os detalhes da vida cotidiana."</p>
             <cite>WILLIAM MORRIS</cite>
         </blockquote>
-    </section>
+    </div>
     <!-- Fecha Quebra -->
 
     <footer>
